--- a/gameTrivia/src/index.html
+++ b/gameTrivia/src/index.html
@@ -2,15 +2,15 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>GameTrivia</title>
+    <title>Digimentore Trivias</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
-    <link
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- <link
       rel="icon"
       type="image/x-icon"
       href="assets/Imagenes Empresa/iconcmi.png"
-    />
+    /> -->
   </head>
   <body>
     <app-root></app-root>
