--- a/gameTrivia/src/index.html
+++ b/gameTrivia/src/index.html
@@ -5,12 +5,12 @@
     <title>Digimentore Trivias</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- <link
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
+    <link
       rel="icon"
       type="image/x-icon"
-      href="assets/Imagenes Empresa/iconcmi.png"
-    /> -->
+      href="assets/Imagenes Empresa/Isotipo.png"
+    /> 
   </head>
   <body>
     <app-root></app-root>
